<resources>
    <string name="app_name">WhereApp-S</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="enter_photo_title">Enter photo title</string>
    <string name="tag1">Tag 1</string>
    <string name="tag2">Tag 2</string>
    <string name="tag3">Tag 3</string>
    <string name="capture">Capture</string>
    <string name="save">Save</string>
    <string name="tags">Tags</string>
    <string name="titles">Titles</string>
    <string name="show_map">Show Map</string>
    <!-- These are the items in our Navigation drawer -->
    <string-array name="nav_drawer_items">
        <item>Titles</item>
        <item>Tags</item>
        <item>Capture</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>