<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/captureLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureFragment">

    <Button
        android:id="@+id/btnCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="148dp"
        android:text="@string/capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="119dp"
        android:layout_marginTop="72dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="147dp"
        android:layout_marginBottom="108dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="236dp"
        android:layout_height="66dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/enter_photo_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextTag2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCapture"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextTag1"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="169dp"
        android:hint="@string/tag1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTag3" />

    <EditText
        android:id="@+id/editTextTag2"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/tag2"
        app:layout_constraintBottom_toTopOf="@+id/editTextTag3"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTag3"
        android:layout_width="180dp"
        android:layout_height="68dp"
        android:layout_marginStart="133dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="167dp"
        android:hint="@string/tag3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTag2" />

</androidx.constraintlayout.widget.ConstraintLayout>